--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS for FUN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="box">
-        <div class="card"></div>
     </div>
 
     <script src="script.js"></script>
@@ -18,3 +17,4 @@
 
 
 <!-- сайт для создания цветовых пар: color.adobe.com/ru/creates -->
+ 
